--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,5 @@ repository = "https://github.com/andersondanilo/rutin-tizen"
 homepage = "https://github.com/andersondanilo/rutin-tizen"
 
 [dependencies]
+libc = "0.2.107"
 rutin-tizen-sys = "0.1.0"
